name:                my-xmonad
version:             0.1.0.0 
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules: Config
               , Rofi
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , dbus >= 1.2.12
                     , iwlib >= 0.1.0
                     , netlink >= 1.1.1.0
                     , containers >= 0.6.2.1
                     , utf8-string >= 1.0.1.1
                     , text >= 1.2.4.0
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -fno-warn-missing-signatures 
                          -- -Werror -fno-warn-missing-signatures -threaded
