cabal-version: >=1.10
name:          my-xmonad
version:       0.1.0.0
build-type:    Simple

executable my-xmonad
    main-is:          ../xmonad.hs
    hs-source-dirs:   lib
    other-modules:
        Config
        Rofi
        DescribedSubmap
        TiledDragging
        WindowSwallowing
        FancyBorders
        WsContexts
        MultiColumns
        IndependentScreens
        --FlexiColumns

    default-language: Haskell2010
    ghc-options:      -Wall -threaded -fno-warn-missing-signatures
    build-depends:
        base -any,
        xmonad >=0.15,
        xmonad-contrib >=0.16,
        dbus >=1.2.12,
        iwlib >=0.1.0,
        netlink >=1.1.1.0,
        containers >=0.6.2.1,
        utf8-string >=1.0.1.1,
        text >=1.2.4.0,
        process >= 0.0.10,
        -- todo remove this again
        X11>=1.6.1 && < 1.10

